tests/machine/x/fs/group_by_multi_join_sort.error
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/machine/x/fs/group_by_multi_join_sort.fs(12,269): error FS0010: Unexpected symbol ']' in expression. Expected '->' or other token.

/workspace/mochi/tests/machine/x/fs/group_by_multi_join_sort.fs(12,6): error FS0010: Unexpected symbol ']' in expression. Expected '->' or other token.
